fix(datagrid): action overflow action-item font size fix (#1429)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [x] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [x] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

<!-- Please describe the current behavior that you are modifying, or
link to a relevant issue. -->

Issue Number: CDE-1747

## What is the new behavior?

## Does this PR introduce a breaking change?

- [ ] Yes
- [ ] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

## Other information

--- a/projects/angular/src/popover/dropdown/_variables.dropdown.scss
+++ b/projects/angular/src/popover/dropdown/_variables.dropdown.scss
@@ -39,7 +39,7 @@ $clr-dropdown-header-letter-spacing: variables.$clr-p4-letter-spacing !default;
 // Usage: ../popover/dropdown/_menu-mixins.clarity.scss
 // Dropdown Item
 $clr-dropdown-item-color: variables.$clr-color-neutral-700 !default;
-$clr-dropdown-item-font-size: variables.$clr-p1-font-size !default;
+$clr-dropdown-item-font-size: variables.$clr-typography-smalltext !default;
 $clr-dropdown-item-font-weight: variables.$clr-p1-font-weight !default;
 $clr-dropdown-item-letter-spacing: variables.$clr-p1-letter-spacing !default;
 $clr-dropdown-item-height: variables.$clr_baselineRem_1_25 !default;
